    * Add fence and fence gate block types.
    * Add materials for the stone variants and the prismarine blocks, fixes #21.
    * Add a GUI for the trowel when you shift-right click on the air, fixes #23.
    * Add a model for the trowel.
    * Reduced significantly the blocks' space usage on disk and made it able to better handle removing/adding materials from existing worlds.
    * Fix vertical slabs culling when placed next to each other, fixes #18.

1.0.3:
    * Fix crash when using forge versions higher than 1521.

1.0.2:
    * Fix glass slabs making the sides of other slabs next to them invisible, fixes #17.
    * Fix crash when you place a wall on top of another wall.
    * Fix not being able to place torches on top of walls.
    * Reduce memory usage in the grass slabs world gen.

1.0.1:
    * Remove usage of javax.vecmath which is not available on servers, fixes #15.
    * Fix crash when placing a double slab blcok next to a slab block, fixes #16.

1.0.0:
    * Fix material loading when running on servers, fixes #14.
    * Improve face culling, fixes #1.
    * Fix the particles when running on a block being the missing texture.

1.0.0-beta4:
    * Fix crash when holding a grass slab.

1.0.0-beta3:
    * Fix block breaking particles not having textures, fixes #7.
    * Fix crash when placing blocks, fixes #13.
    * Fix crash when looking up the recipe for the double slabs.
    * Fix blocks dropping items when breaking them in creative mode, fixes #9.
    * Fix silk touching blocks and their drops, fixes #8.
    * Fix the trowel not respecting the top/side/bottom textures of materials, fixes #6.
    * Change the way the trowel consumes blocks to be more smart, fixes #10.
    * Add keybindings to switch the trowel's block type, fixes #3.

1.0.0-beta2:
    * Fix grass slabs not having a name and creative tab.
    * Fix the trowel not placing the blocks client-side, fixes #4.
    * Fix crash when running on servers, fixes #5.